--- a/P6_Avis_restaurants(def_text).ipynb
+++ b/P6_Avis_restaurants(def_text).ipynb
@@ -1733,7 +1733,7 @@
     "# Les mots de la liste words_to_keep seront conservés, même s'ils sont courants\n",
     "corpus_tokens = nltk.word_tokenize(filtered_corpus)\n",
     "\n",
-    "# Affichez les 10 premiers mots du corpus_tokens\n",
+    "# Afficher les 10 premiers mots du corpus_tokens\n",
     "print(corpus_tokens[:10])\n"
    ]
   },
@@ -1786,7 +1786,7 @@
     "# Les mots de la liste words_to_keep seront conservés, même s'ils sont courants\n",
     "corpus_tokens = nltk.word_tokenize(filtered_corpus)\n",
     "\n",
-    "# Affichez les 10 premiers mots du corpus_tokens\n",
+    "# Afficher les 10 premiers mots du corpus_tokens\n",
     "print(corpus_tokens[:10])\n"
    ]
   },
@@ -3212,10 +3212,10 @@
     "# Obtenir les noms des caractéristiques (mots)\n",
     "feature_names = vectorizer.get_feature_names_out()\n",
     "\n",
-    "# Affichez l'ensemble du vocabulaire\n",
+    "# Afficher l'ensemble du vocabulaire\n",
     "print(\"Ensemble du vocabulaire :\", feature_names)\n",
     "\n",
-    "# Affichez la matrice vocabulaire-documents\n",
+    "# Afficher la matrice vocabulaire-documents\n",
     "print(\"\\nMatrice vocabulaire-documents :\\n\", corpus_vectorized.toarray())\n"
    ]
   },
